HTM-746: Fix misaligned buttons on Chrome/Linux (#350)

--- a/projects/core/assets/tailormap-styles.css
+++ b/projects/core/assets/tailormap-styles.css
@@ -187,6 +187,7 @@ button.toggle-button--active.mat-mdc-button-base.mdc-button--unelevated,
   width: calc(var(--map-control-size) - 16px);
   height: calc(var(--map-control-size) - 16px);
   margin: 0;
+  font-size: 1rem;
 }
 
 .mat-mdc-button-base.button--active,
